[package]
name = "macros-core"
version = "0.2.0"
edition = "2021"
description = "A simple, lightweight, and highly configurable library for quickly parsing macro input into custom objects."
license = "MIT"
repository = "https://github.com/mrvillage/macros"
documentation = "https://docs.rs/macros-core"
readme = "../README.md"

[dependencies]
quote = "1.0"
macros-macros = { version = "0.2.0", path = "../macros-macros" }
macros-utils = { version = "0.2.0", path = "../macros-utils" }

[dev-dependencies]
proc-macro2 = "1.0"
