[package]
name = "macros-macros"
version = "0.1.0"
edition = "2021"
description = "Macros for the macros crate."
license = "MIT"
repository = "https://github.com/mrvillage/macros"
documentation = "https://docs.rs/macros"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
macros-utils = { version = "0.1.0", path = "../macros-utils" }
proc-macro-error = "1.0"
