[package]
name = "macros-utils"
version = "0.2.0"
edition = "2021"
description = "Utilities for the macros crate."
license = "MIT"
repository = "https://github.com/mrvillage/macros"
documentation = "https://docs.rs/macros-core"
readme = "../README.md"

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
